# fact-checking-backend

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  README.md  embeddings.py  manage.py  pyproject.toml
applications/factchecker/: apps.py  urls.py  views.py
django-app/: manage.py
django-app/applications/: __init__.py
django-app/applications/apisearch/: apis_search.py  apis_search_coordinator.py  apps.py  bing_search.py  google_search.py  models.py  serializers.py  urls.py  views.py  wiki_search.py
django-app/applications/apisearch/migrations/: 0001_initial.py
django-app/applications/elasticsearch/: apps.py  elastic_search.py  knowledge_source.py  models.py  retreiver.py  retriever.py  serializers.py  urls.py  views.py
django-app/applications/elasticsearch/migrations/: 0001_initial.py
django-app/applications/factchecker/: apps.py  models.py  serializers.py  views.py
django-app/applications/factchecker/dtos/: answer_dto.py  search_request_dto_in.py  search_request_dto_out.py  verification_methods_enum.py
django-app/applications/factchecker/migrations/: 0001_initial.py  0002_alter_searchresponse_results.py  0002_remove_searchrequest_answer_and_more.py  0003_alter_answer_verdict.py
django-app/applications/factchecker/tests/: factories.py  tests.py
django-app/applications/utils/: enums.py  evidence_selection.py  nli_inference.py
django-app/applications/websearch/: apps.py  bing_search.py  enums.py  google_search.py  nli_inference.py  urls.py  views.py  web_search.py  wiki_search.py
django-app/fact_checking_service/: asgi.py  settings.py  urls.py  wsgi.py
environments/local/: docker-compose.yml
fact-checking-tool/: db.sqlite3  manage.py
fact-checking-tool/fact_checking_tool/: asgi.py  settings.py  urls.py  wsgi.py
fact_checking_service/: asgi.py  settings.py  wsgi.py
http-calls/: add-content_type.http  concat-pipeline.http  move-renamed.http  rename-pipeline.http  trigger-concat.http  trigger-rename
